fix: the style problem caused by SideMenu.vue overflow; :bug: 修复：SideMenu.vue 组件溢出导致的样式问题；

--- a/src/components/menu/index.less
+++ b/src/components/menu/index.less
@@ -2,7 +2,8 @@
   box-shadow: 2px 0 6px rgba(0, 21, 41, .35);
 }
 .side-menu{
-  min-height: 100%;
+  min-height: 100vh;
+  overflow-y: auto;
   z-index: 10;
   .logo{
     height: 64px;
